--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Notes</string>
     <string name="note_title">Title</string>
     <string name="note_content">Write your note...</string>
+    <string name="home">Home</string>
+    <string name="favorites_screen">Favorites</string>
 </resources>
