Add notebooks screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="sort_created_newest">Created(Newest)</string>
     <string name="sort_modified_oldest">Modified(oldest)</string>
     <string name="sort_modified_newest">Modified(newest)</string>
+    <string name="your_notebooks">Your notebooks</string>
 </resources>
